--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,7 +7,18 @@
   </head>
   <body>
     <div>
-      Hello World!
+     <h1 class="naglowek">Portable Editor</h1>
     </div>
+    <div>
+      <input type="text" class="input">
+    </div>
+<div>
+  <button class="button_1"> SAVE</button>
+</div>
+
+<div>
+  <button class="button_2"> LOAD</button>
+</div>
+    
   </body>
 </html>
