--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -17,7 +17,7 @@
 </div>
 
 <div>
-  <button class="button_2"> LOAD</button>
+  <button class="button_2"> <span class="text">LOAD</span></button>
 </div>
     
   </body>
