--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Simple-Editor</title>
+  <title>Taki sobie edytor</title>
 </head>
 
 <body>
   <main class="editor">
-    <h1 class="editor__header">Portable Editor</h1>
+    <h1 class="editor__header">Taki sobie edytor</h1>
     <form class="form">
-      <textarea aria-label="Input text pls"  class="form__textarea textarea--js" placeholder="Input text pls"></textarea>
+      <textarea aria-label="Input text"  class="form__textarea textarea--js" placeholder="Jak masz ochotę to sobie coś tutaj wpisz. Pod spodem masz przyciski do zabawy."></textarea>
       <div class="form__buttons">
-        <button class="button load--js">Load</button>
+        <button class="button load--js">Load <spa class="info--js"></spa></button>
         <button class="button__save save--js"> Save</button>
        
       </div>
